fix(DIST-1220): Set correct z-index for fullscreen widget on mobile

--- a/packages/embed/src/css/widget.scss
+++ b/packages/embed/src/css/widget.scss
@@ -22,6 +22,7 @@
   left: 0;
   right: 0;
   bottom: 0;
+  z-index: 10001;
 
   @include fullsize;
 
@@ -31,5 +32,9 @@
 
     top: 4px;
     right: 6px;
+  }
+
+  iframe {
+    border-radius: 0;
   }
 }
